# HTMLQuery

./: CMakeLists.txt  README.md  build.sh
CMake/: Findgumbo.cmake
lib/installed/vcpkg/info/: gtest_1.11.0_x64-windows.list  gumbo_0.10.1-3_x64-windows.list
lib/installed/x64-windows/debug/lib/: gmockd.lib  gtestd.lib  gumbo.lib  libcurl-d.lib  zlibd.lib
lib/installed/x64-windows/debug/lib/manual-link/: gmock_maind.lib  gtest_maind.lib
lib/installed/x64-windows/debug/lib/manual-link/pkgconfig/: gmock_main.pc  gtest_main.pc
lib/installed/x64-windows/debug/lib/pkgconfig/: gmock.pc  gtest.pc  libcurl.pc
lib/installed/x64-windows/lib/: gmock.lib  gtest.lib  gumbo.lib  libcurl.lib  zlib.lib
lib/installed/x64-windows/lib/manual-link/: gmock_main.lib  gtest_main.lib
lib/installed/x64-windows/lib/manual-link/pkgconfig/: gmock_main.pc  gtest_main.pc
lib/installed/x64-windows/lib/pkgconfig/: gmock.pc  gtest.pc  libcurl.pc
lib/installed/x64-windows/share/GTest/: vcpkg_abi_info.txt
lib/installed/x64-windows/share/curl/: CURLTargets.cmake  curl-config  vcpkg_abi_info.txt
lib/installed/x64-windows/share/gumbo/: vcpkg_abi_info.txt
lib/installed/x64-windows/share/zlib/: vcpkg_abi_info.txt
src/: CMakeLists.txt  HtmlQueryEngine.cpp  HtmlQueryEngine.h  NodePredicates.cpp  NodePredicates.h  main.cpp  utils.cpp  utils.h
src/visitors/: CountingVisitor.cpp  CountingVisitor.h  IGumboNodeVisitor.cpp  IGumboNodeVisitor.h
test/: CMakeLists.txt  run_all_tests.cpp  tCountingVisitor.cpp  tHtmlQueryEngine.cpp  tUtils.cpp
test/assets/: DuplicateUrls.txt  ManyUrls.txt
